--- a/src/main/resources/view/AchievementPanel.fxml
+++ b/src/main/resources/view/AchievementPanel.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane hgap="8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-          prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121">
+<GridPane styleClass="achievement-grid" hgap="8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="340.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -19,9 +18,9 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="XP:" GridPane.rowIndex="1" />
       <Label GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="xpValueLabel" />
       <Label text="Level:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Label text="XP:" GridPane.rowIndex="1" />
       <Label fx:id="levelValueLabel" GridPane.columnIndex="3" GridPane.rowIndex="1" />
    </children>
 </GridPane>
