--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -92,16 +92,14 @@
 
 .list-view:focused .list-cell:filled:selected .card {
     -fx-background-color: #21777B;
-    -fx-text-fill: #2cf0f9;
 }
 
 .list-cell:filled:hover .card {
     -fx-background-color: #21777B;
-    -fx-text-fill: #73c2fb;
 }
 
 .list-cell:hover .label {
-  -fx-text-fill: #73c2fb;
+    -fx-text-fill: white;
 }
 
 #tags {
