--- a/src/main/resources/view/Analytics.css
+++ b/src/main/resources/view/Analytics.css
@@ -13,6 +13,11 @@
     -fx-border-width: 0px 1px 0px 0px;
 }
 
+.dashboard .summary-element:hover {
+    -fx-border-color: #0080FF;
+    -fx-border-width: 1px 1px 1px 1px;
+}
+
 .visualization-pane {
     -fx-background-color: #fff;
 }
