--- a/src/main/resources/view/OccasionWindow.fxml
+++ b/src/main/resources/view/OccasionWindow.fxml
@@ -56,11 +56,11 @@
                 </StackPane>
 
                 <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
-                    <VBox fx:id="moduleList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
+                    <VBox fx:id="occasionList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
                         <padding>
                             <Insets top="10" right="10" bottom="10" left="10" />
                         </padding>
-                        <StackPane fx:id="moduleListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                        <StackPane fx:id="occasionListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                     </VBox>
 
                     <StackPane fx:id="browserPlaceholder" prefWidth="340" >
