--- a/src/main/resources/view/DayMonthYearPanel.fxml
+++ b/src/main/resources/view/DayMonthYearPanel.fxml
@@ -19,7 +19,7 @@
             <Insets left="20.0" />
          </padding>
       </Separator>
-      <HBox fx:id="daysPanel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="900.0">
+       <HBox fx:id="daysPanel" alignment="BOTTOM_RIGHT" minHeight="40">
          <padding>
             <Insets right="10.0" />
          </padding>
