--- a/src/main/resources/view/Analytics.css
+++ b/src/main/resources/view/Analytics.css
@@ -13,9 +13,8 @@
     -fx-border-width: 0px 1px 0px 0px;
 }
 
-.dashboard .summary-element:hover {
-    -fx-border-color: #0080FF;
-    -fx-border-width: 1px 1px 1px 1px;
+.summary-element:hover > .summary-value {
+    -fx-text-fill: #6593F5;
 }
 
 .visualization-pane {
