--- a/src/main/resources/view/CurrentPatientView.css
+++ b/src/main/resources/view/CurrentPatientView.css
@@ -2,6 +2,12 @@ html {
     background-color: #404040;
 }
 
+.heading-container {
+    width: 800px;
+    padding: 15px;
+    float: left;
+}
+
 .left-table-container {
     width: 300px;
     padding: 15px;
@@ -12,6 +18,16 @@ html {
     width: 500px;
     padding: 15px;
     float: left;
+}
+
+.page-heading {
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family: "Arial";
+    font-size: 28px;
+    font-weight: 300;
+    color: white;
+    text-align: left;
 }
 
 .table-title {
