--- a/src/main/resources/view/CurrentPatientView.html
+++ b/src/main/resources/view/CurrentPatientView.html
@@ -5,13 +5,10 @@
     <title>Current Patient View</title>
     <link rel="stylesheet" type="text/css" href="CurrentPatientView.css">
     <script>
-        function loadCurrentPatientDetails(name, ic, address, phone, email, blood, diseases, drugs, notes,
+        function loadCurrentPatientDetails(name, ic, blood, diseases, drugs, notes,
                                            mcContent, referralContent, noteContent, allocatedMedicine) {
             document.getElementById("name").innerHTML=name;
             document.getElementById("ic").innerHTML=ic;
-            document.getElementById("address").innerHTML=address;
-            document.getElementById("phone").innerHTML=phone;
-            document.getElementById("email").innerHTML=email;
             document.getElementById("blood").innerHTML=blood;
             document.getElementById("diseases").innerHTML=diseases;
             document.getElementById("drugs").innerHTML=drugs;
@@ -24,77 +21,48 @@
     </script>
 </head>
 <body>
-<div class="left-table-container" id="left-current-patient-table">
-    <div class="table-title">Current Patient</div>
-    <table class="blue-alt-cols">
-        <tr>
-            <td class="left-table-cols">MC:</td>
-            <td><span id="mcContent"></span></td>
-        </tr>
-        <tr>
-            <td class="left-table-cols">Referral:</td>
-            <td><span id="referralContent"></span></td>
-        </tr>
-    </table>
+<div class="heading-container">
+    <div class="page-heading">Current Patient: <strong><span id="name"></span> [<span id="ic"></span>]</strong></div>
 </div>
-<div class="right-table-container" id="right-current-patient-table">
-    <div class="table-title invisible">Current Patient</div>
-    <table class="blue-alt-cols">
-        <tr>
-            <td class="right-table-cols">Today's Notes:</td>
-            <td><span id="noteContent"></span></td>
-        </tr>
-        <tr>
-            <td class="right-table-cols">Today's Prescriptions:</td>
-            <td><span id="allocatedMedicine"></span></td>
-        </tr>
-    </table>
-</div>
-
 <div class="left-table-container">
-    <div class="table-title">Personal Details</div>
-    <table class="blue-alt-cols">
-        <tr>
-            <td class="left-table-cols">Name</td>
-            <td><span id="name"></span></td>
-        </tr>
-        <tr>
-            <td class="left-table-cols">IC Number</td>
-            <td><span id="ic"></span></td>
-        </tr>
-        <tr>
-            <td class="left-table-cols">Address</td>
-            <td><span id="address"></span></td>
-        </tr>
-        <tr>
-            <td class="left-table-cols">HP Number</td>
-            <td><span id="phone"></span></td>
-        </tr>
-        <tr>
-            <td class="left-table-cols">Email</td>
-            <td><span id="email"></span></td>
-        </tr>
-    </table>
-</div>
-
-<div class="right-table-container">
     <div class="table-title">Medical Records</div>
     <table class="blue-alt-cols">
         <tr>
-            <td class="right-table-cols">Blood Type</td>
+            <td class="left-table-cols">Blood Type</td>
             <td><span id="blood"></span></td>
         </tr>
         <tr>
-            <td class="right-table-cols">Disease History</td>
+            <td class="left-table-cols">Disease History</td>
             <td><span id="diseases"></span></td>
         </tr>
         <tr>
-            <td class="right-table-cols">Drug Allergies</td>
+            <td class="left-table-cols">Drug Allergies</td>
             <td><span id="drugs"></span></td>
         </tr>
         <tr>
-            <td class="right-table-cols">Notes</td>
+            <td class="left-table-cols">Notes</td>
             <td><span id="notes"></span></td>
+        </tr>
+    </table>
+</div>
+<div class="right-table-container">
+    <div class="table-title">Today</div>
+    <table class="blue-alt-cols">
+        <tr>
+            <td class="right-table-cols">Prescriptions:</td>
+            <td><span id="allocatedMedicine"></span></td>
+        </tr>
+        <tr>
+            <td class="right-table-cols">Notes:</td>
+            <td><span id="noteContent"></span></td>
+        </tr>
+        <tr>
+            <td class="right-table-cols">MC:</td>
+            <td><span id="mcContent"></span></td>
+        </tr>
+        <tr>
+            <td class="right-table-cols">Referral:</td>
+            <td><span id="referralContent"></span></td>
         </tr>
     </table>
 </div>
