--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -93,30 +93,25 @@
     -fx-background-color: derive(#1d1d1d, 20%);
 }
 
-.list-cell {
-    -fx-label-padding: 0 0 0 0;
+#historyPanel {
+    -fx-padding: 5 5 5 5;
+}
+#historyListView .list-cell {
+    -fx-label-padding: 1 1 1 1;
     -fx-graphic-text-gap : 0;
-    -fx-padding: 0 0 0 0;
+    -fx-padding: 1 1 1 1;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-background-color: transparent;
 }
 
-.list-cell:filled:even {
-    -fx-background-color: #3c3e3f;
+#historyListView .list-cell:filled:selected {
+    -fx-background-color: #BDBBBA;
+    -fx-text-fill: black;
 }
 
-.list-cell:filled:odd {
-    -fx-background-color: #515658;
-}
-
-.list-cell:filled:selected {
-    -fx-background-color: #424d5f;
-}
-
-.list-cell:filled:selected #cardPane {
-    -fx-border-color: #3e7b91;
-    -fx-border-width: 1;
-}
-
-.list-cell .label {
+#historyListView .list-cell:filled:focused {
+    -fx-background-color: transparent;
     -fx-text-fill: white;
 }
 
@@ -348,4 +343,9 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+}
+
+#historyTitle {
+    -fx-font-size: 15px;
+    -fx-fill: white;
 }
