--- a/src/main/resources/view/ImagePanel.fxml
+++ b/src/main/resources/view/ImagePanel.fxml
@@ -4,5 +4,5 @@
 
 <?import javafx.scene.image.ImageView?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1">
-    <ImageView fx:id="imageView" fitHeight="300" fitWidth="400" preserveRatio="true"/>
+    <ImageView fx:id="imageView" fitHeight="300" fitWidth="400" preserveRatio="true" style="-fx-border-color: blue; -fx-border-width: 1; -fx-border-style: solid;"/>
 </StackPane>
