--- a/src/main/resources/view/OccasionListCard.fxml
+++ b/src/main/resources/view/OccasionListCard.fxml
@@ -25,10 +25,9 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <Label fx:id="name" text="\$name" styleClass="cell_big_label" />
+                <Label fx:id="occasionName" text="\$name" styleClass="cell_big_label" />
+                <Label fx:id="occasionDate" text="\$name" styleClass="cell_big_label" />
             </HBox>
-            <Label fx:id="time" text="\$time" styleClass="cell_big_label" />
-            <Label fx:id="organiser" styleClass="cell_small_label" text="\$organiser" />
         </VBox>
     </GridPane>
 </HBox>
