--- a/src/main/resources/view/TrackCard.fxml
+++ b/src/main/resources/view/TrackCard.fxml
@@ -25,6 +25,7 @@
                     </minWidth>
                 </Label>
                 <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+            </HBox>
         </VBox>
     </GridPane>
 </HBox>
