Update EventListCard CSS

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -121,7 +121,7 @@
     -fx-border-width: 1;
 }
 
-.cell_big_label_white {
+.cell_big_label {
     -fx-font-family: "Segoe UI Semibold";
     -fx-font-size: 16px;
     -fx-text-fill: white;
