change the label categories to tags

--- a/src/main/resources/view/SidebarPanel.fxml
+++ b/src/main/resources/view/SidebarPanel.fxml
@@ -12,7 +12,7 @@
      <VBox prefWidth="300" spacing="5">
          <ToggleButton fx:id="today" onAction="#handleShowView" text="Today" userData="today" />
          <ToggleButton fx:id="week" onAction="#handleShowView" text="This Week" userData="week" />
-         <Text fx:id="categorieslabel" strokeType="OUTSIDE" strokeWidth="0.0" text="Categories" wrappingWidth="300"/>
+         <Text fx:id="categorieslabel" strokeType="OUTSIDE" strokeWidth="0.0" text="Tags" wrappingWidth="300"/>
          <Accordion fx:id="modules" prefWidth="300">
               <panes>
                   <TitledPane animated="false" text="Modules" />
