--- a/src/main/resources/view/WishDetailSavingHistory.fxml
+++ b/src/main/resources/view/WishDetailSavingHistory.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -20,6 +21,7 @@
             <Label styleClass="detail_sub_title_label">
                 Saving History
             </Label>
+            <ListView id="saving_history_listview" fx:id="savingHistoryListView" VBox.vgrow="ALWAYS" />
         </VBox>
     </GridPane>
 </StackPane>
