--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -72,6 +72,13 @@
      -fx-padding: 33 0 15 0;
 }
 
+.detail_saving_history_label {
+     -fx-font-family: "Segoe UI Semibold";
+     -fx-font-size: 18px;
+     -fx-text-fill: #ffffff;
+     -fx-padding: 15 0 15 0;
+}
+
 .text-field {
     -fx-font-size: 12pt;
     -fx-font-family: "Segoe UI Semibold";
@@ -154,6 +161,23 @@
     -fx-label-padding: 0 0 0 0;
     -fx-graphic-text-gap : 0;
     -fx-padding: 0 0 0 0;
+    -fx-background-color: #161618;
+}
+
+#saving_history_listview {
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-background-color: derive(#161618, 0%);
+    -fx-effect: none;
+}
+
+#saving_history_cell {
+    -fx-label-padding: 0 0 0 0;
+    -fx-graphic-text-gap : 0;
+    -fx-padding: 0 0 0 0;
+    -fx-background-color: #161618;
+    -fx-border-color: #3E3F3F;
+    -fx-border-width: 0 0 1.5 0;
 }
 
 .list-cell:filled:even {
