Add UI Panel handling for event on Select event

--- a/src/main/resources/view/Custom.css
+++ b/src/main/resources/view/Custom.css
@@ -229,7 +229,7 @@
     -fx-effect: dropshadow(gaussian, rgb(0.0, 0.0, 0.0, 0.15), 6.0, 0.7, 0.0, 1.5);
 }
 
-#recordEventPanel {
+.browser-panel {
     -fx-background-color: -card-1-;
     -fx-padding: 20;
 }
@@ -238,15 +238,32 @@
     -fx-alignment: center;
 }
 
-#eventNameBox .label{
-    -fx-font-size: 28pt;
+.event-name {
+    -fx-font-size: 20pt;
     -fx-text-fill: -white-1-;
     -fx-font-family: "IBM Plex Sans";
-    -fx-padding: 0 0 5 0;
+}
+
+.detail {
+    -fx-font-size: 12pt;
+    -fx-text-fill: -white-1-;
+    -fx-font-family: "Open Sans";
+}
+
+#eventDateBox {
+    -fx-padding: 20 0 0 0;
+}
+
+#eventDescriptionLabel {
+    -fx-padding: 20 0 0 0;
+}
+
+#numOfVolunteersLabel {
+    -fx-padding: 20 0 0 0;
 }
 
 #numOfVolunteerBox .label{
-    -fx-font-size: 14pt;
+    -fx-font-size: 12pt;
     -fx-text-fill: -white-1-;
     -fx-font-family: "IBM Plex Sans";
     -fx-padding: 0 0 20 0;
