--- a/src/main/resources/view/RecordEventPanel.fxml
+++ b/src/main/resources/view/RecordEventPanel.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="recordEventPanel" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="recordEventPanel" styleClass="browser-panel" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
     <VBox alignment="CENTER_LEFT" fx:id="eventNameBox">
-        <Label fx:id="eventNameLabel">
+        <Label fx:id="eventNameLabel" styleClass="event-name">
             Event Name
         </Label>
     </VBox>
