--- a/src/main/resources/view/Custom.css
+++ b/src/main/resources/view/Custom.css
@@ -300,6 +300,23 @@
     -fx-alignment: CENTER-LEFT;
 }
 
+.table-view *.scroll-bar:horizontal *.increment-button,
+.table-view *.scroll-bar:horizontal *.decrement-button {
+    -fx-background-color: null;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+
+.table-view *.scroll-bar:horizontal *.increment-arrow,
+.table-view *.scroll-bar:horizontal *.decrement-arrow {
+    -fx-background-color: null;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: null;
+}
+
 #emptyTable {
     -fx-text-alignment: center;
     -fx-font-size: 15pt;
