--- a/src/main/resources/view/RecordEventPanel.fxml
+++ b/src/main/resources/view/RecordEventPanel.fxml
@@ -24,11 +24,11 @@
                 <Label fx:id="emptyTable" text="To begin, enter 'add volunteer_index'.&#10;e.g add 1 "></Label>
             </placeholder>
             <columns>
-                <TableColumn prefWidth="50" fx:id="indexColumn" text="#"/>
-                <TableColumn prefWidth="430" fx:id="nameColumn" text="Name"/>
-                <TableColumn prefWidth="140" fx:id="numberColumn" text="Contact Number"/>
-                <TableColumn prefWidth="50" fx:id="hourColumn" text="Hours"/>
-                <TableColumn prefWidth="230" fx:id="remarkColumn" text="Remarks"/>
+                <TableColumn fx:id="indexColumn" text="#"/>
+                <TableColumn fx:id="nameColumn" text="Name"/>
+                <TableColumn fx:id="numberColumn" text="Contact Number"/>
+                <TableColumn fx:id="hourColumn" text="Hours"/>
+                <TableColumn fx:id="remarkColumn" text="Remarks"/>
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
