Enhanced UI for module and occasion cards

--- a/src/main/resources/view/ModuleListCard.fxml
+++ b/src/main/resources/view/ModuleListCard.fxml
@@ -29,6 +29,8 @@
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
+      <Label fx:id="academicYear" styleClass="cell_small_label" text="\$year" />
+      <Label fx:id="semester" styleClass="cell_small_label" text="\$semester" />
     </VBox>
   </GridPane>
 </HBox>
