--- a/src/main/resources/view/Custom.css
+++ b/src/main/resources/view/Custom.css
@@ -231,7 +231,7 @@
 
 .browser-panel {
     -fx-background-color: -card-1-;
-    -fx-padding: 20;
+    -fx-padding: 40;
 }
 
 #totalVolunteersStatus exit.label {
@@ -239,9 +239,10 @@
 }
 
 .event-name {
+    -fx-font-weight: 700;
     -fx-font-size: 20pt;
     -fx-text-fill: -white-1-;
-    -fx-font-family: "IBM Plex Sans";
+    -fx-font-family: "Open Sans";
 }
 
 .detail {
@@ -250,8 +251,8 @@
     -fx-font-family: "Open Sans";
 }
 
-#eventDateBox {
-    -fx-padding: 20 0 0 0;
+#eventNameLabel {
+    -fx-padding: 0 0 20 0;
 }
 
 #eventDescriptionLabel {
