--- a/src/main/resources/view/Custom.css
+++ b/src/main/resources/view/Custom.css
@@ -94,7 +94,7 @@
 #contextIndicator .label {
     -fx-font-size: 1.5em;
     -fx-padding: 5 5 5 8;
-    -fx-text-fill: -white-1-;
+    -fx-text-fill: white;
 }
 
 .split-pane:horizontal .split-pane-divider {
@@ -150,7 +150,6 @@
 
 .cell_big_label {
     -fx-font-weight: 600;
-    -fx-padding: 0 0 5 0;
 }
 
 .list-cell .label {
@@ -231,7 +230,7 @@
 
 .browser-panel {
     -fx-background-color: -card-1-;
-    -fx-padding: 40;
+    -fx-padding: 30;
 }
 
 #totalVolunteersStatus exit.label {
@@ -251,8 +250,23 @@
     -fx-font-family: "Open Sans";
 }
 
-#eventNameLabel {
+#tags {
+    -fx-padding: 0 0 5 0;
+}
+
+#tagsLabel {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
     -fx-padding: 0 0 20 0;
+}
+
+#tagsLabel .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
 }
 
 #eventDescriptionLabel {
