--- a/src/main/resources/view/EventPanel.fxml
+++ b/src/main/resources/view/EventPanel.fxml
@@ -8,12 +8,12 @@
 <VBox fx:id="eventPanel" styleClass="browser-panel" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
     <VBox alignment="CENTER_LEFT">
         <Label fx:id="eventNameLabel" styleClass="event-name" />
-        <FlowPane fx:id="tags" />
-        <HBox spacing="5" fx:id="eventDateBox" alignment="CENTER_LEFT">
+        <FlowPane fx:id="tagsLabel" />
+        <HBox fx:id="eventDateBox" alignment="CENTER_LEFT">
             <Label fx:id="eventStartDateLabel" styleClass="detail" />
             <Label fx:id="eventEndDateLabel" styleClass="detail" />
         </HBox>
-        <HBox spacing="5" alignment="CENTER_LEFT">
+        <HBox alignment="CENTER_LEFT">
             <Label fx:id="eventStartTimeLabel" styleClass="detail" />
             <Label fx:id="eventEndTimeLabel" styleClass="detail" />
         </HBox>
