--- a/src/main/resources/view/LoginForm.fxml
+++ b/src/main/resources/view/LoginForm.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<GridPane fx:id="loginFormGrid" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 	<padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
 	<Label fx:id="usernameLabel" text="User Name:" styleClass="label-bright"
 		   GridPane.columnIndex="0" GridPane.rowIndex="0"/>
