--- a/src/main/resources/view/DetailPanel.fxml
+++ b/src/main/resources/view/DetailPanel.fxml
@@ -24,6 +24,18 @@
                   <Insets bottom="15.0" />
                </FlowPane.margin>
             </Label>
+            <Label fx:id="ingredientToShopLabel" prefWidth="800.0" styleClass="details-label"
+                   text="Ingredient to shop:">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" />
+               </FlowPane.margin>
+            </Label>
+            <Label fx:id="ingredientsToShop" prefWidth="800.0" styleClass="details-text" text="\$ingredient"
+                   wrapText="true">
+               <FlowPane.margin>
+                  <Insets bottom="15.0" />
+               </FlowPane.margin>
+            </Label>
             <Label fx:id="instructionLabel" prefWidth="800.0" styleClass="details-label" text="Instructions:">
                <FlowPane.margin>
                   <Insets bottom="10.0" />
