BrowserPanel: Revert to old version, will be removed eventually

--- a/src/main/resources/view/BrowserPanel.fxml
+++ b/src/main/resources/view/BrowserPanel.fxml
@@ -1,64 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-  <WebView fx:id="browser" />
-   <VBox>
-      <children>
-         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <children>
-               <TitledPane animated="false" prefHeight="212.0" prefWidth="800.0" text="Medical History" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                 <content>
-                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                 </content>
-                  <font>
-                     <Font name="System Bold" size="15.0" />
-                  </font>
-               </TitledPane>
-            </children>
-         </AnchorPane>
-          <AnchorPane prefHeight="200.0" prefWidth="200.0">
-              <children>
-                  <TitledPane animated="false" prefHeight="232.0" prefWidth="801.0" text="Past Appointments" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                      <font>
-                          <Font name="System Bold" size="15.0" />
-                      </font>
-                      <content>
-                          <TableView prefHeight="200.0" prefWidth="200.0">
-                              <columns>
-                                  <TableColumn prefWidth="75.0" text="C1" />
-                                  <TableColumn prefWidth="75.0" text="C2" />
-                              </columns>
-                          </TableView>
-                      </content>
-                  </TitledPane>
-              </children>
-          </AnchorPane>
-         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <children>
-               <TitledPane animated="false" prefHeight="232.0" prefWidth="801.0" text="Upcoming Appointments" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                  <font>
-                     <Font name="System Bold" size="15.0" />
-                  </font>
-                  <content>
-                     <TableView prefHeight="200.0" prefWidth="200.0">
-                       <columns>
-                         <TableColumn prefWidth="75.0" text="C1" />
-                         <TableColumn prefWidth="75.0" text="C2" />
-                       </columns>
-                     </TableView>
-                  </content>
-               </TitledPane>
-            </children>
-         </AnchorPane>
-      </children>
-   </VBox>
+<StackPane xmlns:fx="http://javafx.com/fxml/1">
+  <WebView fx:id="browser"/>
 </StackPane>
