--- a/src/main/resources/view/Documents/Receipt_For_John_Doe_S1234567X.html
+++ b/src/main/resources/view/Documents/Receipt_For_John_Doe_S1234567X.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Receipt for David</title>
+    <title>Receipt for John Doe</title>
     <script>
         function loadDetails(titleString, headerString, nameString, icString, contentString) {
             document.title = titleString;
@@ -14,14 +14,14 @@
     </script>
     <h1>
         <img src = "../../images/CLInicLogo.PNG" alt = "CLInic's logo" align = "right" height="70px" width="350px">
-        <div class = "header" id="headerDiv">Receipt<br>Issued On: 29/10/2018 20:27:36</div>
+        <div class = "header" id="headerDiv">Receipt<br>Issued On: 29/10/2018 20:27:43</div>
     </h1>
 </head>
 <div class="main">
     <table>
         <tr>
             <td><div class = information>Name:</div></td>
-            <td><div class = field id="nameDiv">David</div></td>
+            <td><div class = field id="nameDiv">John Doe</div></td>
         </tr>
         <tr>
             <td><div class = information>IC Number:</div></td>
