--- a/src/main/resources/view/FilmReelPanel.fxml
+++ b/src/main/resources/view/FilmReelPanel.fxml
@@ -14,5 +14,5 @@
         </Insets>
     </VBox.margin>
     </VBox>
-    <ListView fx:id="imageListView" VBox.vgrow="ALWAYS" />
+    <ListView fx:id="imageListView" VBox.vgrow="ALWAYS" maxWidth="200" minWidth="200"/>
 </VBox>
