Add new tab to show location display information

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -349,3 +349,8 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+h1, h2, h3, h4, h5 {
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+}
