--- a/src/main/resources/view/locationLanding.html
+++ b/src/main/resources/view/locationLanding.html
@@ -6,6 +6,6 @@
 </head>
 
 <body class="background">
-    <h1>Things will be shown here. Eventually.</h1>
+<h1>Location related information will be displayed in this tab.</h1>
 </body>
 </html>
