--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -100,6 +100,10 @@
     -fx-background-color: #273445;
 }
 
+#calendarDisplayBox {
+    -fx-background-color: #282828;
+}
+
 /* command box styles */
 #commandTypeLabel {
     -fx-font-size: 11px;
