--- a/src/main/resources/view/DetailPanel.fxml
+++ b/src/main/resources/view/DetailPanel.fxml
@@ -25,13 +25,13 @@
                      <Insets bottom="15.0" />
                   </FlowPane.margin>
                </Label>
-               <Label fx:id="ingredientToShopLabel" prefWidth="800.0" styleClass="details-label"
+               <Label fx:id="ingredientToShopLabel" prefWidth="800.0" styleClass="shop-label"
                       text="Ingredient to shop:">
                   <FlowPane.margin>
                      <Insets bottom="10.0" />
                   </FlowPane.margin>
                </Label>
-               <Label fx:id="ingredientsToShop" prefWidth="800.0" styleClass="details-text" text="\$ingredient"
+               <Label fx:id="ingredientsToShop" prefWidth="800.0" styleClass="shop-text" text="\$ingredient"
                       wrapText="true">
                   <FlowPane.margin>
                      <Insets bottom="15.0" />
