--- a/src/main/resources/view/ToDoListEventCard.fxml
+++ b/src/main/resources/view/ToDoListEventCard.fxml
@@ -4,11 +4,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox prefHeight="25.0" prefWidth="390.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="16.0" />
-      <Label fx:id="id" prefHeight="24.0" prefWidth="25.0" text="$id" />
-      <Label fx:id="title" prefHeight="23.0" prefWidth="250.0" text="$title" />
-      <Label fx:id="priority" prefHeight="22.0" prefWidth="100.0" text="$priority" />
-   </children>
+<HBox id="cardPane" fx:id="cardPane" prefHeight="25.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+      <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="16.0" HBox.hgrow="ALWAYS"/>
+      <Label fx:id="id" prefHeight="24.0" prefWidth="25.0" text="$id" HBox.hgrow="ALWAYS"/>
+      <Label fx:id="title" prefHeight="23.0" prefWidth="250.0" text="$title" HBox.hgrow="ALWAYS"/>
+      <Label fx:id="priority" prefHeight="22.0" prefWidth="100.0" text="$priority" HBox.hgrow="ALWAYS"/>
 </HBox>
